# gps_pipeline

./: CMakeLists.txt  README.md  main.cpp
cmake/: code-coverage.cmake
data/: config.json  sample.nmea
include/: .gitignore  console_display.h  display.h  display_interface.h  file_display.h  filter_interface.h  gps_point.h  history.h  json_config.h  jump_filter.h  mock_display.h  nmea_parser.h  parser.h  pipeline.h  satellite_filter.h  smoothing_filter.h  speed_filter.h  stop_filter.h
include/app/: pipeline.h
include/domain/: filter_result.h  gps_point.h  i_display.h  i_filter.h  i_history.h  i_parser.h
include/filters/: filter.h  jump_filter.h  satellite_filter.h  speed_filter.h  stop_filter.h
include/infra/: console_display.h  display_factory.h  file_display.h  filter_factory.h  gps_history.h  json_config.h  jump_filter.h  nmea_parser.h  satellite_filter.h  smoothing_filter.h  speed_filter.h  stop_filter.h
src/: console_display.cpp  display.cpp  display_factory.cpp  file_display.cpp  filter_factory.cpp  gps_history.cpp  gps_point.cpp  history.cpp  json_config.cpp  jump_filter.cpp  main.cpp  mock_display.cpp  nmea_parser.cpp  parser.cpp  pipeline.cpp  satellite_filter.cpp  smoothing_filter.cpp  speed_filter.cpp  stop_filter.cpp  utils.cpp
src/filters/: filter.cpp  jump_filter.cpp  nmea_parser.cpp  satellite_filter.cpp  speed_filter.cpp  stop_filter.cpp
tests/: test_console_display.cpp  test_display.cpp  test_display_factory.cpp  test_filter_factory.cpp  test_gps_point.cpp  test_history.cpp  test_jump_filter.cpp  test_mock_display.cpp  test_nmea_parser.cpp  test_output.cpp  test_parser.cpp  test_pipeline.cpp  test_pipeline_ old.cpp  test_satellite_filter.cpp  test_smoothing_filter.cpp  test_speed_filter.cpp  test_stop_filter.cpp
tests/filters/: test_filter.cpp  test_jump_filter.cpp  test_satellite_filter.cpp  test_speed_filter.cpp  test_stop_filter.cpp
tests/mocks/: mock_display.h  mock_filter.h  mock_history.h  mock_parser.h
